# binary_tree_serialization

./: CMakeLists.txt  README.md
binary_tree/: CMakeLists.txt
binary_tree/include/: btree.h
binary_tree/src/: btree.c
deserialize_process/: CMakeLists.txt
deserialize_process/src/: deserialize_process.c
serialize/: CMakeLists.txt
serialize/include/: serialize.h
serialize/src/: serialize.c
serialize_binary_tree/: CMakeLists.txt
serialize_binary_tree/include/: serial_btree.h
serialize_binary_tree/src/: serialization_btree.c
serialize_process/: CMakeLists.txt
serialize_process/src/: serialize_process.c
test/: CMakeLists.txt
test/src/: test_btree.c
